--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=passwordforpwitter
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+pwitter.init=true
