--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/pwitter
 spring.datasource.username=pwitter
 spring.datasource.password=passwordforpwitter
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-pwitter.init=true
+pwitter.init=false
