--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.20.0",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.2.14",
     "react": "^16.8.6",
