--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/pwitter
 spring.datasource.username=pwitter
 spring.datasource.password=passwordforpwitter
+# Pwitter
+pwitter.init=true
