--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/pwitter
 spring.datasource.username=root
 spring.datasource.password=
+# Pwitter
+pwitter.init=false
