--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/pwitter
 spring.datasource.username=pwitter
 spring.datasource.password=passwordforpwitter
 # Pwitter
-pwitter.init=true
+pwitter.init=false
