--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.2.14",
+    "dayjs": "^1.8.16",
     "less": "^3.10.3",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
