--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,6 +20,7 @@
         <shiro.version>1.4.1</shiro.version>
         <jwt.version>3.8.1</jwt.version>
         <faker.version>0.18</faker.version>
+        <gson.version>2.8.6</gson.version>
     </properties>
 
     <dependencies>
@@ -57,6 +58,11 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>${faker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
 
