Backend: update dependencies, add api parameter validate tools, remove hibernate table's relationships

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=dev
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
