--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/pwitter
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/pwitter
 spring.datasource.username=pwitter
 spring.datasource.password=passwordforpwitter
+spring.jpa.hibernate.ddl-auto=validate
 # Pwitter
 pwitter.init=false
-pwitter.fake=true
+pwitter.fake=false
