Backend: support paging in timeline

--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.password=passwordforpwitter
 spring.jpa.hibernate.ddl-auto=validate
 # Pwitter
 pwitter.init=false
-pwitter.fake=true
+pwitter.fake=false
